# Ingestion-Api-Analytics-Task

./: README.md  analytics.py  app.py  data.json  ingestion.py  pyproject.toml  requirements.txt
templates/: index.html
