[tool.poetry]
name = "ingestion-api-analytics-task"
version = "0.1.0"
description = ""
authors = ["Deepak-Gangwani <deepakgangwani512@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
flask = "^3.0.3"
statistics = "^1.0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
